--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,16 @@
 <html lang="en">
   <head>
     <title>Mute Mallard</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="./index.css" /> -->
   </head>
   <body>
+
     <div id="root"></div>
     <base href="/" />
     <script src="index.js"></script>
